安全方面，CORS 从全开放改为读取配置白名单，AuthFilter 和 RateLimitFilter 移除了手动反射 Origin 的 CORS 头。AuthService 新增了 Redis 登录失败计数（5次锁定15分钟），移除了明文密码兼容逻辑，注册接口加了用户名正则校验。所有 9 个模块的 application.properties 把 Nacos/Redis/RocketMQ/ES/OTel 的地址和凭据改为 ${ENV_VAR:default} 环境变量占位。InteractionNotificationController 的手动 JSON 按逗号分割替换成了 Jackson ObjectMapper，AdminPostController 的手动 JSON 拼接也换成 Jackson。JwtUtil 加了 issuer 验证和显式 type=access claim。
合规方面，新建了 legal_document 表（Flyway 迁移）和对应的实体/Mapper/Controller，提供隐私政策和用户协议的查询接口。UserService 新增了 deleteAccount 方法，验证密码后标记 status=-1 并清空个人资料。UserProfile 加了 isMinor 字段，更新生日时自动根据年龄计算。AdminReportService 处理举报后向举报人插入一条通知。新增了两条 Flyway 迁移脚本。